2011-03-28  Andrew Foster  <andrewf@chromium.org>

        Reviewed by Ojan Vafai.

        webkit-patch should be more intelligent about whether a bug applies to a patch
        Create a new function, parse_bug_id_from_changelog() which determines
        that a bug is related to a patch by parsing the output generated from
        prepare-ChangeLog, rather than arbitrarily matching a URL to a bug in
        the description of a patch.
        https://bugs.webkit.org/show_bug.cgi?id=56989

        * Scripts/webkitpy/common/checkout/api.py:
        * Scripts/webkitpy/common/checkout/changelog.py:
        * Scripts/webkitpy/common/net/bugzilla/__init__.py:
        * Scripts/webkitpy/common/net/bugzilla/bugzilla.py:
        * Scripts/webkitpy/common/net/bugzilla/bugzilla_unittest.py:
        * Scripts/webkitpy/style/checkers/changelog.py:
        * Scripts/webkitpy/tool/commands/upload.py:

2011-03-28  Maciej Stachowiak  <mjs@apple.com>

        Revert accidentally commited change.

        * DumpRenderTree/mac/ResourceLoadDelegate.mm:
        (-[ResourceLoadDelegate webView:resource:willSendRequest:redirectResponse:fromDataSource:]):

2011-03-28  Tony Chang  <tony@chromium.org>

        Reviewed by Adam Barth.

        [chromium] have DRT write the png checksum into a png comment
        https://bugs.webkit.org/show_bug.cgi?id=57255

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::dumpImage):

2011-03-28  Adele Peterson  <adele@apple.com>

        Removing Qt stub, since it doesn't use the same header as the others.

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:

2011-03-28  Adele Peterson  <adele@apple.com>

        Added a few more stubs.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::hasGrammarMarker):
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::hasGrammarMarker):
        * DumpRenderTree/wx/LayoutTestControllerWx.cpp: