@@ -69,8 +69,10 @@ if (isAppleMacWebKit()) {
     $result = buildVisualStudioProject("JavaScriptCore.vcproj/JavaScriptCore.sln");
 } elsif (isGtk()) {
     $result = buildGtkProject("JavaScriptCore");
-} elsif (isQt() or isWx()) {
-    # Qt builds everything in one-shot. No need to build anything here.
+} elsif (isQt()) {
+    $result = buildQMakeProject("JavaScriptCore", 0, @ARGV);
+} elsif (isWx()) {
+    # Builds everything in one-shot. No need to build anything here.
     $result = 0;
 } else {
     die "Building not defined for this platform!\n";
