@@ -1,3 +1,13 @@
+2011-03-28  Gabor Loki  <loki@webkit.org>
+
+        Reviewed by Csaba Osztrogonác.
+
+        [Qt] Teach build-jsc how to build JavaScriptCore on Qt
+        https://bugs.webkit.org/show_bug.cgi?id=56918
+
+        * Scripts/build-jsc:
+        * Scripts/webkitdirs.pm:
+
 2011-03-28  Andrew Foster  <andrewf@chromium.org>
 
         Reviewed by Ojan Vafai.
